PF-006: Add add update location endpoint
