# PersonsFinder-openapi.yaml
@@ -67,6 +67,31 @@ paths:
               schema:
                 $ref: "#/components/schemas/PersonDto"
 
+  /api/v1/persons/{id}/location:
+    put:
+      summary: "PUT api/v1/persons/{id}/location"
+      operationId: "updateLocation"
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PersonLocationRequest"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/LocationDto"
+
 components:
   schemas:
     CreatePersonRequest:
@@ -87,3 +112,31 @@ components:
       required:
         - "id"
         - "name"
+    PersonLocationRequest:
+      type: "object"
+      properties:
+        latitude:
+          type: "number"
+          format: "double"
+        longitude:
+          type: "number"
+          format: "double"
+      required:
+        - "latitude"
+        - "longitude"
+    LocationDto:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        latitude:
+          type: "number"
+          format: "double"
+        longitude:
+          type: "number"
+          format: "double"
+      required:
+        - "id"
+        - "latitude"
+        - "longitude"
