# src/main/kotlin/com/persons/finder/domain/services/PersonsService.kt
@@ -1,9 +1,11 @@
 package com.persons.finder.domain.services
 
+import com.persons.finder.data.LocationEntity
 import com.persons.finder.data.PersonEntity
 
 interface PersonsService {
     fun getById(id: Long): PersonEntity
     fun getByIds(ids: List<Long>): List<PersonEntity>
     fun save(person: PersonEntity): PersonEntity
+    fun updateLocation(personId: Long, latitude: Double, longitude: Double): LocationEntity
 }
